--- a/pinyougou-manager-web/src/main/webapp/admin/type_template.html
+++ b/pinyougou-manager-web/src/main/webapp/admin/type_template.html
@@ -18,6 +18,15 @@
     <link rel="stylesheet" href="../plugins/select2/select2-bootstrap.css" />
     <script src="../plugins/select2/select2.min.js" type="text/javascript"></script>
 
+	<script src="../plugins/angularjs/angular.min.js"></script>
+
+	<link rel="stylesheet" href="../plugins/angularjs/pagination.css">
+	<script src="../plugins/angularjs/pagination.js"></script>
+
+	<script src="../js/base_pagination.js"></script>
+	<script src="../js/service/typeTemplateController.js"></script>
+	<script src="../js/controller/baseController.js"></script>
+	<script src="../js/controller/typeTemplateController.js"></script>
 </head>
 
 <body class="hold-transition skin-red sidebar-mini" >
@@ -91,8 +100,8 @@
 			                          </tr>
 			                      </tbody>
 			                  </table>
-			                  <!--数据列表/-->                        
-							  
+			                  <!--数据列表/-->
+							<tm-pagination conf="paginationConf"></tm-pagination>
 							 
                         </div>
                         <!-- 数据表格 /-->
